[project]
name = "zhihu-pipeline"
version = "0.1.0"
description = "Zhihu collections to Obsidian pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "markdownify>=0.11.6",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
